add-lazy-loader

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,16 +1,15 @@
-<div class="bg-success border-right  p-3 " style="--bs-bg-opacity: .5;" id="sidebar">
-  <h3>Gifs App</h3>
+<div class="border-right  p-3" id="sidebar">
+  <h3>Gif App</h3>
   <hr class="text-dark">
   <div class="list-group list-reset">
 
-    <ul class="list-group" >
-      <li class="mt-2" *ngFor="let gif of tagHistory" >
 
-        <button class="list-group-item list-group-item-action list-group-item-dark" (click)="selectedGif(gif)">
-          {{gif | uppercase}}
+      <button *ngFor="let gif of tagHistory"
+
+        class="d-flex justify-content-between align-items-center list-group-item list-group-item-action list-group-item-dark" (click)="selectedGif(gif)">
+          {{gif | uppercase}}<button class="btn btn-outline-danger btn-sm" (click)="deleteSearch(gif)">X</button>
         </button>
 
-      </li>
-    </ul>
   </div>
 </div>
+
