--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex">
   <!-- Sidebar -->
 
-<shared-sidebar></shared-sidebar>
+<shared-sidebar id="sidebar"></shared-sidebar>
 
   <!-- Homepage -->
 
