--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,16 +1,14 @@
-<div class="row">
-  <div *ngFor="let gifs of gifList" class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
+<div *ngIf="gifList.length-1 >= 1;else none">
+<div class="col">
 
-      <img [src]="gifs.images.downsized_medium.url" [alt]="gifs.title"
-      class="card-img-top">
-
-
-      <div class="card-body text-white">
-        <p class="card-text">
-          {{gifs.title}}
-        </p>
-      </div>
-    </div>
-  </div>
+  <app-gifs-card *ngFor="let gif of gifList" [gif]="gif" class="col-md-3 col-sm-6">
+  </app-gifs-card>
 </div>
+</div>
+
+
+<ng-template #none>
+  <h1>Not Found</h1>
+</ng-template>
+
+
